fix : Arruma gap do menu.

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -30,7 +30,7 @@
 .navbar-links{
     display: flex;
     align-items: center;
-    gap: 0.4rem;
+    gap: 1rem;
     list-style: none;
 }
 
